--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
